--- a/Assignments/Assignment 1.html
+++ b/Assignments/Assignment 1.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Assignment 1 & 2</title>
+      <title>Week 1 & 2</title>
   </head>
   <body>
       <div id="container">
@@ -19,10 +19,10 @@
           <div id="content">
               <div id="Assignment">
                 <div id="title2">
-                  <h2>Assignment 1 & 2 - GitHub and Html Creation</h2>
+                  <h2>Week 1 & 2 - GitHub and Html Creation</h2>
                 </div>
                 <div id="GitHub">
-                  <h3>GitHub Creation:</h3>
+                  <h3>Assignment 1 - GitHub Creation:</h3>
                   <iframe id="AV1" src="https://www.youtube.com/embed/M5mg0r4ajt4"></iframe> 
                   <div id="GitHubV">
                     <p>For assignment 1, we created a GitHub repository to host our project website. We followed the video on the left, by:</p>
@@ -36,7 +36,7 @@
                 <hr>
                 <div id="HtmlCss">
                   <div id="HtmlCssV">
-                    <h3>HTML and CSS:</h3>
+                    <h3>Assignment 2 - HTML and CSS:</h3>
                     <iframe id="AV2" src="https://www.youtube.com/embed/bWPMSSsVdPk"></iframe> 
                     <p>For the first potion of assignment 2, we first started by watching the video on the right. Through this video, we learned how to set up a basic HTML-based website, specifically learning how to insert a title, headers, paragraphs, breaks, lines, and images.</p>
                     <iframe id="AV3" src="https://www.youtube.com/embed/0afZj1G0BIE"></iframe> 
