--- a/Assignments/Assignment 3.html
+++ b/Assignments/Assignment 3.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Assignment 3</title>
+      <title>Week 3</title>
   </head>
   <body>
       <div id="container">
@@ -19,7 +19,7 @@
           <div id="content">
             <div id="Assignment">
               <div id="title2">
-                <h2>Assignment 3 - 2D and 3D CAD</h2>
+                <h2>Week 3 - 2D and 3D CAD</h2>
               </div>
               <div id="TwoD">
                 <h3>2D: Exercise 1</h3>
