--- a/Assignments/Assignment 4.html
+++ b/Assignments/Assignment 4.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Assignment 4</title>
+      <title>Week 4</title>
   </head>
   <body>
       <div id="container">
@@ -19,7 +19,7 @@
           <div id="content">
             <div id="Assignment">
               <div id="title2">
-                <h2>Assignment 4 - 3D CAD</h2>
+                <h2>Week 4 - 3D CAD</h2>
               </div>
               <div id="TwoD">
                 <h3>Exercise 5</h3>
