--- a/Assignments/Assignment 5.html
+++ b/Assignments/Assignment 5.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Assignment 5</title>
+      <title>Week 5</title>
   </head>
   <body>
       <div id="container">
@@ -19,24 +19,24 @@
           <div id="content">
             <div id="Assignment">
               <div id="title2">
-                <h2>Assignment 5 - Laser Cutting</h2>
+                <h2>Week 5 - Laser Cutting</h2>
               </div>
               <div id="TwoD">
                 <h3>Exercise 9</h3>
                 <img id="A3P1" src="../Images/Week 5">
                 <img id="A3P2" src="../Images/Week 5">
-                <p id="Cap1"><b>1.</b> For all of these exercises, we used Fusion 360 to create 3D models based on video guides and design specifications. In exercise 5, we made a toy brick by, firstly, using the sketch tool to make a 31.80mm by 15.80mm rectangle, which was then extruded by 9.60mm to form the basic shape of the brick. We then used the sketch tool to draw a circle on the top of the brick.</p>
-                <p id="Cap2"><b>2.</b> Afterward, we extruded the circles and duplicated using the rectangular pattern tool to create the cylinders on the top of the brick.</p>
+                <p id="Cap1"><b>1.</b> </p>
+                <p id="Cap2"><b>2.</b> </p>
                 <img id="A3P3" src="../Images/Week 5">
                 <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-                <p id="Cap1"><b>3.</b> Then, we used the shell tool to hollow out the bottom of the brick. From the hollowed out area, we sketched the circles required to make the cylinders in the bottom of the brick, before extruding these circles and using the shell tool to hoollow out the cylinders.</p>
-                <p id="Cap2"><b>4.</b> The top cylinders were then chamfered, resulting in the above 3D model.</p>
+                <p id="Cap1"><b>3.</b> </p>
+                <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
                 <hr>
                 
                 <h3>Exercise 10</h3>
                 <img id="A3P1" src="../Images/Week 5">
                 <img id="A3P2" src="../Images/Week 5">
-                <p id="Cap1"><b>1.</b> In exercise 6, we </p>
+                <p id="Cap1"><b>1.</b> In exercise 10, we </p>
                 <p id="Cap2"><b>2.</b> I then proceeded to </p>
                 <img id="A3P3" src="../Images/Week 5">
                 <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
@@ -44,6 +44,17 @@
                 <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
               </div>
               <hr>
+              <div id="ThreeD">
+                <h3>Assignment 3 - Laser Cut Box</h3>
+                <img id="A3P1" src="../Images/Week 5/Assignment 3/Assignment 3 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 5/Assignment 3/Assignment 3 Part 2.gif">
+                <p id="Cap1"><b>1.</b> For assignment 3, we designed and laser cut a box with a movable lid or door and drawer. I started by designing a basic box with an open front end using the sketch tool, along with another sketch for the middle horizontal piece to fit between the door and the drawers.</p>
+                <p id="Cap2"><b>2.</b> Next, I made a sketch for the door of the box and extruded all previous sketches by 3mm. I then made all bodies components and joined then together using the joint tool, then made an initial sketch of the designs for the drawer, before extruding and joining the pieces together to construct the drawer and placing that drawer inside the box.</p>
+                <img id="A3P3" src="../Images/Week 5/Assignment 3/Assignment 3 Part 3.gif">
+                <img id="A3P4" src="../Images/Week 5/Assignment 3/Assignment 3 Part 4.gif">
+                <p id="Cap1"><b>3.</b> Finally, I added a chess themed design to the box by adding chess pieces to the side joints, adding the outline of a king piece to the sides of the box, and adding a chessboard design to the top of the box to complete the design. Lastly, I redesigned the front of the drawer to allow it to be easier to pull out.</p>
+                <p id="Cap2"><b>4.</b> The final sketches were then exported as .dxf files for laser cutting, and were then brought to the FabLab's laser cutter to be cut. Afterward, the pieces were then put together to result in the final model.</p>
+              </div>
             </div>
           </div>
         <div id="footer">
