--- a/Assignments/Assignment 6.html
+++ b/Assignments/Assignment 6.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Assignment 6</title>
+      <title>Week 6</title>
   </head>
   <body>
       <div id="container">
@@ -19,7 +19,7 @@
           <div id="content">
             <div id="Assignment">
               <div id="title2">
-                <h2>Assignment 6 - 3D Printing</h2>
+                <h2>Week 6 - 3D Printing</h2>
               </div>
               <div id="TwoD">
                 <h3>Exercise 11</h3>
@@ -30,18 +30,29 @@
                 <hr>
                 
                 <h3>Exercise 12</h3>
-                <img id="A3P1" src="../Images/Week 6">
-                <img id="A3P2" src="../Images/Week 6">
-                <p id="Cap1"><b>1.</b> In exercise 12, we </p>
+                <img id="A3P1" src="../Images/Week 6/Exercise 12/2023-06-19.png">
+                <img id="A3P2" src="../Images/Week 6/Exercise 12/">
+                <p id="Cap1"><b>1.</b> In exercise 12, the chess piece designed in exercise 11 was printed using a 3D printer from the FabLab. To do so, the completed 3D model was first imported into the Ultimaker Cura software for slicing. The estimated time to print the model and the gennerated supports was 51 minutes.</p>
                 <p id="Cap2"><b>2.</b> I then proceeded to </p>
-                <img id="A3P3" src="../Images/Week 6">
+                <img id="A3P3" src="../Images/Week 6/Exercise 12/">
+                <img id="A3P3" src="../Images/Week 6/Exercise 12/">
+                <p id="Cap1"><b>3.</b> </p>
+                <p id="Cap2"><b>4.</b> After removing the support structures, it resulted in the printed model above.</p>
+              </div>
+              <hr>
+              <div id="ThreeD">
+                <h3>Assignment 4 - 3D Printed Phone Stand</h3>
+                <img id="A3P1" src="../Images/Week 6/Assignment 4/">
+                <img id="A3P2" src="../Images/Week 6/Assignment 4/">
+                <p id="Cap1"><b>1.</b> For assignment 3, </p>
+                <p id="Cap2"><b>2.</b> </p>
+                <img id="A3P3" src="../Images/Week 6/Assignment 4/">
                 <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
                 <p id="Cap1"><b>3.</b> </p>
                 <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
               </div>
             </div>
           </div>
-        </div>
         <div id="footer">
               Copyright &copy; 2023 
           </div>
