Assignment 5 and 6 Final

--- a/Assignments/Assignment 6.html
+++ b/Assignments/Assignment 6.html
@@ -30,26 +30,22 @@
                 <hr>
                 
                 <h3>Exercise 12</h3>
-                <img id="A3P1" src="../Images/Week 6/Exercise 12/2023-06-19.png">
-                <img id="A3P2" src="../Images/Week 6/Exercise 12/">
-                <p id="Cap1"><b>1.</b> In exercise 12, the chess piece designed in exercise 11 was printed using a 3D printer from the FabLab. To do so, the completed 3D model was first imported into the Ultimaker Cura software for slicing. The estimated time to print the model and the gennerated supports was 51 minutes.</p>
-                <p id="Cap2"><b>2.</b> I then proceeded to </p>
-                <img id="A3P3" src="../Images/Week 6/Exercise 12/">
-                <img id="A3P3" src="../Images/Week 6/Exercise 12/">
-                <p id="Cap1"><b>3.</b> </p>
-                <p id="Cap2"><b>4.</b> After removing the support structures, it resulted in the printed model above.</p>
+                <img id="A3P1" src="../Images/Week 6/Exercise 12/2023-06-28.png">
+                <img id="A3P2" src="../Images/Week 6/Exercise 12/Exercise 12 Part 2.gif">
+                <p id="Cap1"><b>1.</b> In exercise 12, the chess piece designed in exercise 11 was printed using a 3D printer from the FabLab. To do so, the completed 3D model was first imported into the Ultimaker Cura software for slicing. The estimated time to print the model and the gennerated supports was 45 minutes.</p>
+                <p id="Cap2"><b>2.</b> The sliced model was then saved as a gcode file and printed using an ultimaker 2+ 3D printer. After removing the support structures, it resulted in the printed model above.</p>
               </div>
               <hr>
               <div id="ThreeD">
                 <h3>Assignment 4 - 3D Printed Phone Stand</h3>
-                <img id="A3P1" src="../Images/Week 6/Assignment 4/">
-                <img id="A3P2" src="../Images/Week 6/Assignment 4/">
-                <p id="Cap1"><b>1.</b> For assignment 3, </p>
-                <p id="Cap2"><b>2.</b> </p>
-                <img id="A3P3" src="../Images/Week 6/Assignment 4/">
-                <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-                <p id="Cap1"><b>3.</b> </p>
-                <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
+                <img id="A3P1" src="../Images/Week 6/Assignment 4/Assignment 4 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 6/Assignment 4/Assignment 4 Part 2.gif">
+                <p id="Cap1"><b>1.</b> For assignment 4, we were tasked to make a phone stand using a 3D printer. First, I started by making a general outline sketch based on the basic shape of the front end of a jeep. The sketch was then extruded, and a sketch of the mudguards and wheels of the jeep design was made alongside the model along with the design of the bonnet of the jeep on the front top end of the model. Both of these sketches were then extruded.</p>
+                <p id="Cap2"><b>2.</b> I then created a sketch for the headlights and other designs on the front of the jeep, and extuded those sketches accordingly. Afterward, I used a sketch of a rectangle, a curved line and the flow tool to create the front bumper of the jeep design.</p>
+                <img id="A3P3" src="../Images/Week 6/Assignment 4/Assignment 4 Part 3.gif">
+                <img id="A3P4" src="../Images/Week 6/Assignment 4/Assignment 4 Part 4.gif">
+                <p id="Cap1"><b>3.</b> Finally, used the sketch, extrude, and move tools to create and move the seats of the jeep to their proper positions, before adding more detail to the wheels and extending the rear end of the model to help ensure that the the phone stand would not flip over once a phone was placed on top.</p>
+                <p id="Cap2"><b>4.</b> The final model was then placed into the ultimaker cura slicer, before being saved as a gcode file and printed using an ultimaker 2+ 3D printer. After removing the support structures, it resulted in the printed model above.</p>
               </div>
             </div>
           </div>
