Assignments 7 to 9 Final

--- a/Assignments/Assignment 5.html
+++ b/Assignments/Assignment 5.html
@@ -5,7 +5,7 @@
   <body>
       <div id="container">
           <div id="header">
-              <h1 id="Name">My Website</h1>
+            <h1 id="Name"><a href="../index.html">My Website</a></h1>
               <link rel="stylesheet" type="text/css" href="../style.css">
               <div id="nav">
                 <div class="flex-container">
@@ -23,24 +23,20 @@
               </div>
               <div id="TwoD">
                 <h3>Exercise 9</h3>
-                <img id="A3P1" src="../Images/Week 5">
-                <img id="A3P2" src="../Images/Week 5">
-                <p id="Cap1"><b>1.</b> </p>
-                <p id="Cap2"><b>2.</b> </p>
-                <img id="A3P3" src="../Images/Week 5">
-                <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-                <p id="Cap1"><b>3.</b> </p>
-                <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
+                <img id="A3P1" src="../Images/Week 5/Exercise 9/Exercise 9 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 5/Exercise 9/2023-05-20.png">
+                <p id="Cap1"><b>1.</b> In exercise 9, we designed a keychain with text and a design on the top. I started by creating the body of the keyychain based on the given design specifications, making a keychain with raised borders around the sides and a hole on the left side of the keychain using the sketch and extrude tools. I then proceded to add text and my icon design from a previous exercise to the top of the model.</p>
+                <p id="Cap2"><b>2.</b> This resulted in the above 3D model.</p>
                 <hr>
                 
                 <h3>Exercise 10</h3>
-                <img id="A3P1" src="../Images/Week 5">
-                <img id="A3P2" src="../Images/Week 5">
-                <p id="Cap1"><b>1.</b> In exercise 10, we </p>
-                <p id="Cap2"><b>2.</b> I then proceeded to </p>
-                <img id="A3P3" src="../Images/Week 5">
-                <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-                <p id="Cap1"><b>3.</b> </p>
+                <img id="A3P1" src="../Images/Week 5/Exercise 10/Exercise 10 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 5/Exercise 10/Exercise 10 Part 2.gif">
+                <p id="Cap1"><b>1.</b> In exercise 10, we designed a laptop stand using Fusion 360. I started by making a sketch of the side profile of the side piece of the laptop stand, before extruding, copying, and moving the copied side piece a set distance away through the use of a user parameter. </p>
+                <p id="Cap2"><b>2.</b> I then proceeded to sketch, extrude and copy-paste the connector pieces for the laptop stand, before making all the bodies in the Fusion 360 project components to allow them to be joined afterward.</p>
+                <img id="A3P3" src="../Images/Week 5/Exercise 10/Exercise 10 Part 3.gif">
+                <iframe id="A3P4" src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6e9f98d1227fd7ec0d?mode=embed" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                <p id="Cap1"><b>3.</b> Finally, I joined the components together to create the laptop stand, before filleting certain sharp corners to create the final model.</p>
                 <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
               </div>
               <hr>
