--- a/assignments page.html
+++ b/assignments page.html
@@ -5,7 +5,7 @@
   <body>
       <div id="container">
           <div id="header">
-              <h1 id="Name">My Website</h1>
+            <h1 id="Name"><a href="index.html">My Website</a></h1>
               <link rel="stylesheet" type="text/css" href="style.css">
               <div id="nav">
                 <div class="flex-container">
@@ -19,17 +19,21 @@
           <div id="content">
               <div id="Assignment">
                 <div id="title1">
-                  <h2>Assignments:</h2>
+                  <h2>Exercises and Assignments:</h2>
                 </div>
                 <div id="Assignment_list">
                   <div class="flex-container">
-                    <p><a href="Assignments/Assignment 1.html">Assignment 1 and 2 - GitHub and Html Creation</a></p>
-                    <p><a href="Assignments/Assignment 3.html">Assignment 3 - 2D and 3D CAD</a></p>
-                    <p><a href="Assignments/Assignment 4.html">Assignment 4 - 3D CAD</a></p>
-                    <p><a href="Assignments/Assignment 5.html">Assignment 5 - Laser Cutting</a></p>
-                    <p><a href="Assignments/Assignment 6.html">Assignment 6 - 3D Printing</a></p>
-                    <p><a href="Assignments/Assignment 7.html">Assignment 7 - Arduino</a></p>
-                    <p><a href="Assignments/Placeholder assignment.html">Assignment ...</a></p>
+                    <div class="link1">
+                      <a href="Assignments/Assignment 1.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-09 (1).png"></a>
+                      <div class="centered">Week 1 and 2 - GitHub, Html and Css</div>
+                    </div>
+                    <p><a href="Assignments/Assignment 3.html">Week 3 - 2D and 3D CAD</a></p>
+                    <p><a href="Assignments/Assignment 4.html">Week 4 - 3D CAD</a></p>
+                    <p><a href="Assignments/Assignment 5.html">Week 5 - Laser Cutting</a></p>
+                    <p><a href="Assignments/Assignment 6.html">Week 6 - 3D Printing</a></p>
+                    <p><a href="Assignments/Assignment 7.html">Week 10 - Arduino I</a></p>
+                    <p><a href="Assignments/Assignment 8.html">Week 11 - Arduino II</a></p>
+                    <p><a href="Assignments/Assignment 9.html">Week 12 - Arduino III</a></p>
                   </div>
                 </div>
               </div>
