--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div id="container">
             <div id="header">
-              <h1 id="Name">My Website</h1>
+              <h1 id="Name"><a href="index.html">My Website</a></h1>
               <link rel="stylesheet" type="text/css" href="style.css">
               <div id="nav">
                 <div class="flex-container">
