Assignment Page Final

--- a/assignments page.html
+++ b/assignments page.html
@@ -24,16 +24,37 @@
                 <div id="Assignment_list">
                   <div class="flex-container">
                     <div class="link1">
-                      <a href="Assignments/Assignment 1.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-09 (1).png"></a>
-                      <div class="centered">Week 1 and 2 - GitHub, Html and Css</div>
+                      <a href="Assignments/Assignment 1.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-09 (1).png">
+                      <div class="centered">Week 1 and 2 - GitHub, Html and Css</div></a>
                     </div>
-                    <p><a href="Assignments/Assignment 3.html">Week 3 - 2D and 3D CAD</a></p>
-                    <p><a href="Assignments/Assignment 4.html">Week 4 - 3D CAD</a></p>
-                    <p><a href="Assignments/Assignment 5.html">Week 5 - Laser Cutting</a></p>
-                    <p><a href="Assignments/Assignment 6.html">Week 6 - 3D Printing</a></p>
-                    <p><a href="Assignments/Assignment 7.html">Week 10 - Arduino I</a></p>
-                    <p><a href="Assignments/Assignment 8.html">Week 11 - Arduino II</a></p>
-                    <p><a href="Assignments/Assignment 9.html">Week 12 - Arduino III</a></p>
+                    <div class="link2">
+                      <a href="Assignments/Assignment 3.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-12.png">
+                      <div class="centered">Week 3 - 2D and 3D CAD</div></a>
+                    </div>
+                    <div class="link1">
+                      <a href="Assignments/Assignment 4.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-13.png">
+                      <div class="centered">Week 4 - 3D CAD</div></a>
+                    </div>
+                    <div class="link2">
+                      <a href="Assignments/Assignment 5.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-13 (1).png">
+                      <div class="centered">Week 5 - Laser Cutting</div></a>
+                    </div>
+                    <div class="link1">
+                      <a href="Assignments/Assignment 6.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-13 (2).png">
+                      <div class="centered">Week 6 - 3D Printing</div></a>
+                    </div>
+                    <div class="link2">
+                      <a href="Assignments/Assignment 7.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-13 (3).png">
+                      <div class="centered">Week 10 - Arduino I</div></a>
+                    </div>
+                    <div class="link1">
+                      <a href="Assignments/Assignment 8.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-13 (4).png">
+                      <div class="centered">Week 11 - Arduino II</div></a>
+                    </div>
+                    <div class="link2">
+                      <a href="Assignments/Assignment 9.html"><img id="A3P1v2" src = "Images/Assignment Links/2023-07-13 (5).png">
+                      <div class="centered">Week 12 - Arduino III</div></a>
+                    </div>
                   </div>
                 </div>
               </div>
