Assignment 1 and 2 Final

--- a/Assignments/Assignment 1.html
+++ b/Assignments/Assignment 1.html
@@ -10,7 +10,7 @@
               <div id="nav">
                 <div class="flex-container">
                   <li><a href="../final project.html">Final Project</a></li>
-                  <li><a href="../assignments page.html">Assignments</a></li>
+                  <li><a href="../assignments page.html">Assignments & Exercises</a></li>
                   <li><a href="../about.html">About</a></li>
                   <li><a href="../index.html">Home</a></li>
                 </div>
@@ -22,7 +22,7 @@
                   <h2>Week 1 & 2 - GitHub and Html Creation</h2>
                 </div>
                 <div id="GitHub">
-                  <h3>Assignment 1 - GitHub Creation:</h3>
+                  <h3>Exercise - GitHub Creation:</h3>
                   <iframe id="AV1" src="https://www.youtube.com/embed/M5mg0r4ajt4"></iframe> 
                   <div id="GitHubV">
                     <p>For assignment 1, we created a GitHub repository to host our project website. We followed the video on the left, by:</p>
@@ -36,7 +36,7 @@
                 <hr>
                 <div id="HtmlCss">
                   <div id="HtmlCssV">
-                    <h3>Assignment 2 - HTML and CSS:</h3>
+                    <h3>Exercise - HTML and CSS:</h3>
                     <iframe id="AV2" src="https://www.youtube.com/embed/bWPMSSsVdPk"></iframe> 
                     <p>For the first potion of assignment 2, we first started by watching the video on the right. Through this video, we learned how to set up a basic HTML-based website, specifically learning how to insert a title, headers, paragraphs, breaks, lines, and images.</p>
                     <iframe id="AV3" src="https://www.youtube.com/embed/0afZj1G0BIE"></iframe> 
