--- a/assignments page.html
+++ b/assignments page.html
@@ -10,7 +10,7 @@
               <div id="nav">
                 <div class="flex-container">
                   <li><a href="final project.html">Final Project</a></li>
-                  <li><a class="selected" href="">Assignments</a></li>
+                  <li><a class="selected" href="">Assignments & Exercises</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="index.html">Home</a></li>
                 </div>
