--- a/final project.html
+++ b/final project.html
@@ -10,7 +10,7 @@
               <div id="nav">
                 <div class="flex-container">
                   <li><a class="selected" href="">Final Project</a></li>
-                  <li><a href="assignments page.html">Assignments</a></li>
+                  <li><a href="assignments page.html">Assignments & Exercises</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="index.html">Home</a></li>
                 </div>
