--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               <div id="nav">
                 <div class="flex-container">
                   <li><a href="final project.html">Final Project</a></li>
-                  <li><a href="assignments page.html">Assignments</a></li>
+                  <li><a href="assignments page.html">Assignments & Exercises</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a class="selected" href="">Home</a></li>
                 </div>
