Update title for EP1000 Project Site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
   <html>
     <head>
-        <title>My Website</title>
+        <title>EP1000 Project Site</title>
     </head>
     <body>
         <div id="container">
