Update website title and content information

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <body>
         <div id="container">
             <div id="header">
-              <h1 id="Name"><a href="index.html">My Website</a></h1>
+              <h1 id="Name"><a href="index.html">My Portfolio</a></h1>
               <link rel="stylesheet" type="text/css" href="style.css">
               <div id="nav">
                 <div class="flex-container">
-                  <li><a href="final project.html">Final Project</a></li>
-                  <li><a href="assignments page.html">Assignments & Exercises</a></li>
+                  <li><a href="EP1000 home.html">EP1000 Project</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a class="selected" href="">Home</a></li>
                 </div>
@@ -19,13 +18,12 @@
             <div id="content">
               <div id="main">
                 <h1>Hello, Welcome to my website.</h1>
-                <h2>I am Timothy Choo Yern Weng, from class DEEE/FT/2A/04</h2>
-                <p>This website contains some information about me, and covers the documentation of the assignments and final project undertaken throughout the EP1000 module.</p>              
-                <img id = "IndexP" src = "Images/2023-07-12-ANIMATION.gif">
+                <h2>I am Timothy Choo Yern Weng, a graduate of Singapore Polytechnic.</h2>
+                <p>This website contains some information about me and my portfolio so far.</p>              
               </div>
             </div>
             <div id="footer">
-                Copyright &copy; 2023 
+                Copyright &copy; 2026 
             </div>
         </div>
     </body>
