Change title from 'EP1000 Project Site' to 'My Portfolio'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
   <html>
     <head>
-        <title>EP1000 Project Site</title>
+        <title>My Portfolio</title>
     </head>
     <body>
         <div id="container">
