Update About link to new file name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               <div id="nav">
                 <div class="flex-container">
                   <li><a href="EP1000 home.html">EP1000 Project</a></li>
-                  <li><a href="about.html">About</a></li>
+                  <li><a href="about 2026.html">About</a></li>
                   <li><a class="selected" href="">Home</a></li>
                 </div>
               </div>
