Bold section headers for skills and hobbies

--- a/about 2026.html
+++ b/about 2026.html
@@ -21,7 +21,7 @@
                   <p>Hi! I'm Timothy Choo Yern Weng, a graduate of the Electrical and Electronic Engineering course at Singapore Polytechnic.</p>
                   <p>I graduated with a CGPA of 3.90, obtaining a diploma with merit and distinctions in several key engineering modules.</p>
                   <p>I'm enrolling in the College of Design and Engineering at NUS in late 2026.</p>
-                  <p>My skills are:</p>
+                  <p><b>My skills are:</b></p>
                   <li>3D Modelling (Fusion 360)</li>
                   <li>Electronics</li>
                   <li>C++</li>
@@ -33,7 +33,7 @@
                   <li>PLC Programming (TIA Portal)</li>
                   <li>Teamwork</li>
                   <li>Problem-solving</li>
-                  <p>My hobbies include:</p>
+                  <p><b>My hobbies include:</b></p>
                   <li>Building plastic models</li>
                   <li>Gaming</li>
                   <li>Planning holidays</li>
