--- a/about 2026.html
+++ b/about 2026.html
@@ -10,7 +10,7 @@
               <div id="nav">
                 <div class="flex-container">
                   <li><a href="other projects.html">Other Projects</a></li>
-                  <li><a href="EP1000 home.html">EP1000 Project</a></li>
+                  <li><a href="EP1000 home.html">EP1000 Class</a></li>
                   <li><a class="selected" href="">About</a></li>
                   <li><a href="index.html">Home</a></li>
                 </div>
