--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               <div id="nav">
                 <div class="flex-container">
                   <li><a href="other projects.html">Other Projects</a></li>
-                  <li><a href="EP1000 home.html">EP1000 Project</a></li>
+                  <li><a href="EP1000 home.html">EP1000 Class</a></li>
                   <li><a href="about 2026.html">About</a></li>
                   <li><a class="selected" href="">Home</a></li>
                 </div>
@@ -22,6 +22,20 @@
                 <h2>I am Timothy Choo Yern Weng, a graduate of Singapore Polytechnic.</h2>
                 <p>This website contains some information about me and my portfolio so far.</p>              
               </div>
+              <div id="Assignment">
+                <div id="title1">
+                  <h2>Project Catagories:</h2>
+                </div>
+                <div id="Assignment_list">
+                  <div class="flex-container">
+                    <div class="link1">
+                      <a href="EP1000 home.html"><img id="A3P1v2" src = "Images/Project Links/Trigun Wallpaper.jpg">
+                      <div class="centered">EP1000 Class</div></a>
+                    </div>
+                    <div class="link2">
+                      <a href="other projects.html"><img id="A3P1v2" src = "Images/Project Links/Trigun Wallpaper.jpg">
+                      <div class="centered">Other Projects</div></a>
+                    </div>
             </div>
             <div id="footer">
                 Copyright &copy; 2026 
