--- a/other projects.html
+++ b/other projects.html
@@ -10,7 +10,7 @@
               <div id="nav">
                 <div class="flex-container">
                   <li><a class="selected" href="">Other Projects</a></li>
-                  <li><a href="EP1000 home.html">EP1000 Project</a></li>
+                  <li><a href="EP1000 home.html">EP1000 Class</a></li>
                   <li><a href="about 2026.html">About</a></li>
                   <li><a href="index.html">Home</a></li>
                 </div>
@@ -19,7 +19,7 @@
           <div id="content">
               <div id="Assignment">
                 <div id="title1">
-                  <h2>Projects:</h2>
+                  <h2>Other Projects:</h2>
                 </div>
                 <div id="Assignment_list">
                   <div class="flex-container">
