--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
               <link rel="stylesheet" type="text/css" href="style.css">
               <div id="nav">
                 <div class="flex-container">
-                  <li><a href="other projects.html">Other Projects</a></li>
-                  <li><a href="EP1000 home.html">EP1000 Class</a></li>
+                  <li><a href="">CV</a></li>
                   <li><a href="about 2026.html">About</a></li>
                   <li><a class="selected" href="">Home</a></li>
                 </div>
               </div>
             </div> 
             <div id="content">
-              <div id="main">
+              <div id="Assignment">
                 <h1>Hello, Welcome to my website.</h1>
                 <h2>I am Timothy Choo Yern Weng, a graduate of Singapore Polytechnic.</h2>
-                <p>This website contains some information about me and my portfolio so far.</p>              
-              </div>
-              <div id="Assignment">
+                <p>This website contains some information about me and my portfolio so far.</p>
+                <p></p>
                 <div id="title1">
                   <h2>Project Catagories:</h2>
                 </div>
