--- a/EP1000 home.html
+++ b/EP1000 home.html
@@ -12,7 +12,7 @@
                   <li><a href="final project.html">Final Project</a></li>
                   <li><a href="assignments page.html">Assignments & Exercises</a></li>
                   <li><a href="about.html">About</a></li>
-                  <li><a class="selected" href="">Home</a></li>
+                  <li><a class="selected" href="">EP1000</a></li>
                 </div>
               </div>
             </div> 
