--- a/assignments page.html
+++ b/assignments page.html
@@ -12,7 +12,7 @@
                   <li><a href="final project.html">Final Project</a></li>
                   <li><a class="selected" href="">Assignments & Exercises</a></li>
                   <li><a href="about.html">About</a></li>
-                  <li><a href="EP1000 home.html">Home</a></li>
+                  <li><a href="EP1000 home.html">EP1000</a></li>
                 </div>
             </div>
           </div> 
