--- a/final project.html
+++ b/final project.html
@@ -12,7 +12,7 @@
                   <li><a class="selected" href="">Final Project</a></li>
                   <li><a href="assignments page.html">Assignments & Exercises</a></li>
                   <li><a href="about.html">About</a></li>
-                  <li><a href="EP1000 home.html">Home</a></li>
+                  <li><a href="EP1000 home.html">EP1000</a></li>
                 </div>
             </div>
           </div> 
