--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                       <a href="other projects.html"><img id="A3P1v2" src = "Images/Project Links/Trigun Wallpaper.jpg">
                       <div class="centered">Other Projects</div></a>
                     </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <div id="footer">
                 Copyright &copy; 2026 
