--- a/other projects.html
+++ b/other projects.html
@@ -9,6 +9,7 @@
               <link rel="stylesheet" type="text/css" href="style.css">
               <div id="nav">
                 <div class="flex-container">
+                  <li><a href="https://www.linkedin.com/in/tim-choo/">Linkedin</a></li>
                   <li><a href="">CV</a></li>
                   <li><a href="about 2026.html">About</a></li>
                   <li><a href="index.html">Home</a></li>
