--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <div id="Assignment">
                 <h1>Hello, Welcome to my website.</h1>
                 <h2>I am Timothy Choo Yern Weng, a graduate of Singapore Polytechnic.</h2>
-                <h2>This website contains some information about me and my portfolio so far.</h2>
+                <h3>This website contains some information about me and my portfolio so far.</h3>
                 <p></p>
                 <div id="title1">
                   <h2>Project Catagories:</h2>
@@ -28,7 +28,7 @@
                 <div id="Assignment_list">
                   <div class="flex-container">
                     <div class="link1">
-                      <a href="EP1000 html/EP1000 home.html"><img id="A3P1v2" src = "Images/Project Links/Trigun Wallpaper.jpg">
+                      <a href="EP1000 home.html"><img id="A3P1v2" src = "Images/Project Links/Trigun Wallpaper.jpg">
                       <div class="centered">EP1000 Class</div></a>
                     </div>
                     <div class="link2">
