--- a/EP1000 home.html
+++ b/EP1000 home.html
@@ -18,7 +18,7 @@
             </div> 
             <div id="content">
               <div id="main">
-                <h1>Hello, Welcome to my website.</h1>
+                <h1>Hello, Welcome to my (Legacy) website.</h1>
                 <h2>I am Timothy Choo Yern Weng, from class DEEE/FT/2A/04</h2>
                 <p>This website contains some information about me, and covers the documentation of the assignments and final project undertaken throughout the EP1000 module.</p>              
                 <img id = "IndexP" src = "Images/2023-07-12-ANIMATION.gif">
