--- a/other projects.html
+++ b/other projects.html
@@ -24,7 +24,7 @@
                 <div id="Assignment_list">
                   <div class="flex-container">
                     <div class="link1">
-                      <a href="Projects/auto water.html"><img id="A3P1v2" src = "Images/Project Links/Trigun Wallpaper.jpg">
+                      <a href="Projects/auto water.html"><img id="A3P1v2" src = "Images/2023-07-12-ANIMATION.gif">
                       <div class="centered">Automated Watering System</div></a>
                     </div>
                     <div class="link2">
