Fixed EP1000 link GIF

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="Assignment_list">
                   <div class="flex-container">
                     <div class="link1">
-                      <a href="EP1000 home.html"><img id="A3P1v2" src = "Images/Project Links/Trigun Wallpaper.jpg">
+                      <a href="EP1000 home.html"><img id="A3P1v2" src = "Images/2023-07-12-ANIMATION.gif">
                       <div class="centered">EP1000 Class</div></a>
                     </div>
                     <div class="link2">
